fix(composition): take into account roundabout iterations